# rust-commandline-example

./: Cargo.toml  README.md
data/: db.json
src/: main.rs
