[package]
name = "rust-commandline-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
clap = "2.33"
tui = "0.13"
crossterm = "0.19"
crossbeam = "0.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.12"
textwrap = "0.13"
