[package]
name = "rust-commandline-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
crossbeam = "0.8"
clap = { version = "2.33", default-features = false }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
textwrap = "0.13"
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.13", default-features = false, features = ['crossterm', 'serde'] }
lazy_static = "1.4"
thiserror = "1.0"
